# aws-hackathon-infra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  opencode.json  pytest.ini
.github/: workflow.yaml
.github/workflows/: deploy.yml
.opencode/: README.md  config.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
cdk/: app.py  cdk.json  config.py  dangerous_code.py  pyproject.toml  pyrightconfig.json  requirements.txt
cdk/stacks/: __init__.py  agentcore_stack.py  compute_stack.py  database_stack.py  monitoring_stack.py  network_stack.py  security_stack.py  security_stack.py.backup  storage_stack.py
cdk/stacks/cognito_bidops_repo/: app.py  cognito_stack.py  create-test-users.sh  typescript-to-python-conversion-2025-01-13.md
docs/: FRONTEND-SETUP-COMMANDS-EXPLAINED.md  SECURITY-BEST-PRACTICES.md  SETUP.md  SUMMARY-WHAT-WE-DID.md  arch-mvp.mermaid  arch.md  cognito-deployment-readiness_2025-10-15.md  cognito-testing-guide_2025-10-15.md  current-arch.mmd  deployment-readiness-analysis.md  pre-commit-setup.md  testing-best-practices.md
docs/cognito/: COGNITO-FRONTEND-INTEGRATION.md  FRONTEND-SETUP-COMMANDS-EXPLAINED.md  SECURITY-BEST-PRACTICES.md  SETUP.md  SUMMARY-WHAT-WE-DID.md  cognito-integration-analysis_2025-10-15.md  cognito-testing-guide_2025-10-15.md
docs/deployment/: cdk-deployment-readiness-report_2025-10-14.md  cognito-deployment-readiness_2025-10-15.md  deployment-readiness-analysis_2025-10-08_13-45-14.md  (+1 more)
scripts/: create-test-users.sh  deploy.sh  rollback.sh
tests/: conftest.py
(+109 files in other folders)
